# yadr

./: .gitignore  Makefile  Pipfile  README.rst  precommit.py  pyproject.toml  requirements.txt  setup.cfg
docs/: dice_notation.rst  requirements.rst
docs/source/: api.rst  conf.py  dice_notation.rst  execution.rst  index.rst  internals.rst  lexing.rst  operators.rst
src/yadr/: __main__.py  base.py  lex.py  operator.py  yadr.py
tests/: common.py  test_encoder.py  test_lex.py  test_maps.py  test_operator.py  test_parse.py  test_parser.py  test_yadr.py
tests/data/: __test_dice_map.txt
yadr/: __init__.py  base.py  encode.py  lex.py  maps.py  model.py  operator.py  parse.py  parser.py  pools.py  yadr.py
yadr/data/: dice_maps.yadn
