[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "yadr"
version = "0.1.4"
authors = [
    {name="Paul J. Iutzi", email="pji@mac.com"},
]
description = "Yet another dice roller for Python."
readme = "README.rst"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.scripts]
blackjack = "yadr.__main__:parse_cli"


[project.urls]
"Homepage" = "https://github.com/pji/yadr"
"Documentation" = "https://yadr.readthedocs.io"
"Source" = "https://github.com/pji/yadr"


[tool.rstcheck]
report_level = "WARNING"
ignore_directives = ["autoclass", "autofunction"]


[tool.setuptools.package-data]
yadr = ['data/dice_maps.yadn',]


[tool.tox]
legacy_tox_ini = """[tox]
envlist = py310, py311, py312, py313


[testenv]
allowlist_externals = isort
commands =
    pytest {posargs: tests}
    isort ./src/yadr --check-only --diff --skip .tox --lai 2 -m 3
    isort ./tests --check-only --diff --skip .tox --lai 2 -m 3
deps = -rrequirements.txt
    pytest
    pytest-mock
"""


[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.12.1"
rstcheck = "^6.2.4"
wheel = "^0.45.1"
build = "^1.2.2.post1"
twine = "^6.1.0"
mypy = "^1.15.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
tox = "^4.24.1"
isort = "^6.0.0"
furo = "^2024.8.6"

